Using drop chances and removed tier requirement